tests/ui/missing_field.pea
struct Cow {
    name: [u8],
}

fn main() {
    let cow = Cow {};
}
